--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run serve",
-    "build": "npm run build-ts && npm run tslint",
+    "build": "npm run tslint && npm run build-ts",
+    "build-ts": "tsc --noEmitOnError --baseUrl src",    
     "serve": "node dist/server.js",
-    "watch-server": "nodemon --inspect --watch 'src/**/*' --exec 'node -r ts-node/register' ./src/server.ts",
-    "build-ts": "tsc --noEmitOnError --baseUrl src",
-    "watch-ts": "tsc -w",
+    "watch-server": "nodemon --inspect --watch 'src/**/*' -e ts,tsx --exec 'node -r ts-node/register' ./src/server.ts",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "dev": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\"  \"npm run watch-ts \"  \"nodemon --inspect dist/server.js\""
+    "dev": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\"  \"npm run watch-ts \"  \"nodemon --inspect dist/server.js\"",
+    "watch-ts": "tsc -w"  
   },
   "keywords": [
     "node",
