doc(README): add todo list

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build": "npm run tslint && npm run build-ts",
     "build-ts": "tsc --noEmitOnError --baseUrl src",    
     "serve": "node dist/server.js",
-    "watch-server": "nodemon --inspect --watch 'src/**/*' -e ts,tsx --exec 'node -r ts-node/register' ./src/server.ts",
+    "watch-server": "nodemon --inspect=0.0.0.0:9229 --watch 'src/**/*' -e ts,tsx --exec 'node -r ts-node/register' ./src/server.ts",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "dev": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\"  \"npm run watch-ts \"  \"nodemon --inspect dist/server.js\"",
+    "dev": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\"  \"npm run watch-ts \"  \"nodemon --inspect=0.0.0.0:9229 dist/server.js\"",
     "watch-ts": "tsc -w"  
   },
   "keywords": [
